[package]
description = "blazingly fast revolutionary data structure"
name = "jitlist"
version = "0.0.0-sigma.67+DO-NOT-USE-THIS"
edition = "2024"
readme = "README.md"
repository = "https://github.com/epskid/jitlist"
license = "GPL-3.0"
keywords = ["epic", "cool", "great", "amazing", "awful"]
categories = ["data-structures"]

[dependencies]
anyhow = "1.0.102"
dynasmrt = "5.0.0"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "against_vec"
harness = false
